feat: add api/files{slug}
