# routes/api.php
@@ -39,6 +39,7 @@ Route::get('/banners/{slug}', [BannerController::class, 'show'])->name('api.bann
 Route::get('/pages/{slug}', [PageController::class, 'show'])->name('api.pages.show');
 Route::get('/universities', [UniversityController::class, 'index'])->name('api.universities.index');
 Route::get('/social-networks', [SocialNetworkController::class, 'index'])->name('api.social-networks.index');
+Route::get('/files/{slug}', [\App\Http\Controllers\Api\ExampleFileController::class, 'binary'])->name('api.example_files.binary');
 
 Route::group(['prefix' => 'localization'], function () {
     Route::get('/i18n/{locale}', [LocalizationController::class, 'i18n']);
